# ping-pong-tt

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
cli/: Cargo.toml
cli/src/: gen_certs.rs  lib.rs  main.rs
client/: Cargo.toml
client/src/: client.rs  error.rs  handler.rs  lib.rs
common/: Cargo.toml
common/src/: error.rs  hash.rs  lib.rs  serialization.rs  stream.rs
common/src/message/: id.rs  mod.rs  request.rs  response.rs
common/src/utils/: gen_certs.rs
kubernetes-example/: deployment.canary.yaml  deploymnet.stable.yaml  service.yaml
server/: Cargo.toml
server/src/: error.rs  handler.rs  server.rs
