[package]
name = "cli"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
client = { path = "../client" }
server = { path = "../server" }
common = { path = "../common" }

base64 = "0.21.0"
rcgen = "0.10.0"
ring = "0.16.20"
time = "0.3.21"

clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"]}
