[package]
name = "cli"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
client = { path = "../client" }
server = { path = "../server" }
common = { path = "../common" }

clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"]}
