[package]
name = "common"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
rand = "0.8.5"
sha2 = "0.10.6"
bincode = "1.3.3"
thiserror = "1.0.40"
base64 = "0.21.0"
rcgen = "0.10.0"
ring = "0.16.20"
time = "0.3.21"
serde = { version = "1.0.164", features = ["derive"] }
wtransport = { git = "https://github.com/BiagioFesta/wtransport.git" }

