[package]
name = "server"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
common = { path = "../common" }
thiserror = "1.0.40"
async-channel = "1.8.0"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"]}
wtransport = { git = "https://github.com/BiagioFesta/wtransport.git" }

[dev-dependencies]
client = { path = "../client" }
